<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:id="@+id/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/bg_rounded_corner"
        android:divider="?android:attr/dividerVertical"
        android:dividerPadding="8dp"
        android:showDividers="middle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:text="@string/app_name"
            android:textColor="@color/primaryColor"
            android:textSize="32sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_km"
            android:textSize="16sp"
             />

        <EditText
            android:id="@+id/edit_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/distance"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"

            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/price_per_liter"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edit_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/price"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text"
            android:importantForAutofill="no" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/kms_per_liter"
            android:textSize="16sp"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/edit_autonomy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="@string/autonomy"
            android:padding="16dp"
            android:background="@drawable/bg_edit_text" />



        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_roundTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_trip"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_spend"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/text_total_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_value"
            android:textColor="@color/primaryColor"
            android:textSize="40sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primaryColor"
            android:padding="16dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

    </LinearLayout>
</ScrollView>
